Add wrapper for services section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <div class="main-section">
         <section class="services">
-          <div class="wrapper">
+          <div class="services-wrapper">
             <a href="/" class="section-link">
               services
             </a>
