Add articles section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,32 @@
           </div>
         </section>
       </div>
+      <section class="squad">
+        <div class="wrapper">
+          <div class="team-member-card">
+            <div class="team-member-photo"></div>
+            <div class="team-member-details">
+              <a href="/" class="section-link">
+                Команда
+              </a>
+              <h2 class="section-title">
+                Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.
+              </h2>
+              <p class="team-member-name">
+                Олександр Олександровський
+              </p>
+              <p class="team-member-position">
+                Керуючий партнер
+              </p>
+            </div>
+          </div>
+          <div class="slider">
+            <button type="button" class="team-member-slide active"></button>
+            <button type="button" class="team-member-slide"></button>
+            <button type="button" class="team-member-slide"></button>
+          </div>
+        </div>
+      </section>
       <section class="clients">
         <h2 class="clients-title">
           They already trust us
@@ -155,6 +181,72 @@
                 <img src="./assets/images/clients/ultimateCard.png" alt="logo of client Ultimate Card" height="95" width="152">
               </a>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="publications">
+        <div class="wrapper">
+          <a href="/" class="section-link">
+            Publications
+          </a>
+          <h2 class="section-title">
+            We have something to tell
+          </h2>
+          <div class="articles">
+            <a href="/" class="article-page">
+              <article class="article">
+                <div class="article-banner art-equity"></div>
+                <div class="article-details">
+                  <div class="article-meta">
+                    <h3 class="article-title">
+                      Equity associate
+                    </h3>
+                    <p class="publication-date">
+                      April 22
+                    </p>
+                  </div>
+                  <p class="article-preview">
+                    I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…
+                  </p>
+                </div>
+              </article>
+            </a>
+            <a href="/" class="article-page">
+              <article class="article">
+                <div class="article-banner art-gdpr"></div>
+                <div class="article-details">
+                  <div class="article-meta">
+                    <h3 class="article-title">
+                      Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR
+                    </h3>
+                    <p class="publication-date">
+                      September 29
+                    </p>
+                  </div>
+                  <p class="article-preview">
+                    And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.
+                  </p>
+                </div>
+              </article>
+            </a>
+            <a href="/" class="article-page">
+              <article class="article">
+                <div class="article-banner art-millennial"></div>
+                <div class="article-details">
+                  <div class="article-meta">
+                    <h3 class="article-title">
+                      Millennial Testament
+                    </h3>
+                    <p class="publication-date">
+                      August 19
+                    </p>
+                  </div>
+                  <p class="article-preview">
+                    What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…
+                  </p>
+                </div>
+              </article>
+            </a>
           </div>
         </div>
       </section>
