Add offers section

--- a/index.html
+++ b/index.html
@@ -9,188 +9,220 @@
   </head>
   <body>
     <main>
-      <section class="services">
-        <div class="wrapper">
-          <a href="/" class="section-link">
-            services
-          </a>
-          <h2 class="section-title">
-            What can we do better than others?
-          </h2>
-          <div class="services-list">
-            <div class="service">
-              <div class="service-icon">
-                <img src="./assets/images/services/ecommerce-service.png" alt="icon of e-commerce service" height="64" width="64">
+      <div class="top-section">
+        <div class="group-top-sections">
+          <section class="offers">
+            <div class="wrapper wrap-offers">
+              <div class="offer-card">
+                <div class="offers-list">
+                  <button class="offer offer-active">
+                    Consistent
+                  </button>
+                  <button class="offer">
+                    Customer oriented
+                  </button>
+                  <button class="offer">
+                    Innovative
+                  </button>
+                  <button class="offer">
+                    Business oriented
+                  </button>
+                </div>
+                <div class="offer-content">
+                  <h2 class="offer-title">
+                    We turn the idea of legal services
+                  </h2>
+                  <p class="offer-description">
+                    Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve a number of important decisions for the industry. Many of them form the practice of applying the law of the sea in Ukraine.
+                  </p>
+                </div>
               </div>
-              <h3 class="service-name">
-                IT and e-commerce
-              </h3>
-              <p class="service-description">
-                An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.
-              </p>
             </div>
-            <div class="service">
-              <div class="service-icon">
-                <img src="./assets/images/services/support-service.png" alt="icon of support service" height="64" width="64">
-              </div>
-              <h3 class="service-name">
-                Comprehensive daily legal support
-              </h3>
-              <p class="service-description">
-                In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.
-              </p>
-            </div>
-            <div class="service">
-              <div class="service-icon">
-                <img src="./assets/images/services/corporate-service.png" alt="icon of corporate service" height="64" width="64">
-              </div>
-              <h3 class="service-name">
-                Structuring corporate relationships
-              </h3>
-              <p class="service-description">
-                Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.
-              </p>
-            </div>
-            <div class="service">
-              <div class="service-icon">
-                <img src="./assets/images/services/trust-service.png" alt="icon of trust service" height="64" width="64">
-              </div>
-              <h3 class="service-name">
-                Building contractual relations
-              </h3>
-              <p class="service-description">
-                Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.
-              </p>
-            </div>
-            <div class="service">
-              <div class="service-icon">
-                <img src="./assets/images/services/protection-service.png" alt="icon of protection service" height="64" width="64">
-              </div>
-              <h3 class="service-name">
-                Protection of business, intellectual property
-              </h3>
-              <p class="service-description">
-                And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.
-              </p>
-            </div>
-            <div class="service">
-              <div class="service-icon">
-                <img src="./assets/images/services/court-service.png" alt="icon of court service" height="64" width="64">
-              </div>
-              <h3 class="service-name">
-                Judicial representation
-              </h3>
-              <p class="service-description">
-                Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="squad">
-        <div class="wrapper">
-          <div class="team-member-card">
-            <div class="team-member-photo"></div>
-            <div class="team-member-details">
+          </section>
+          <section class="services">
+            <div class="wrapper">
               <a href="/" class="section-link">
-                Команда
+                services
               </a>
               <h2 class="section-title">
-                Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.
+                What can we do better than others?
               </h2>
-              <p class="team-member-name">
-                Олександр Олександровський
-              </p>
-              <p class="team-member-position">
-                Керуючий партнер
-              </p>
+              <div class="services-list">
+                <div class="service">
+                  <div class="service-icon">
+                    <img src="./assets/images/services/ecommerce-service.png" alt="icon of e-commerce service" height="64" width="64">
+                  </div>
+                  <h3 class="service-name">
+                    IT and e-commerce
+                  </h3>
+                  <p class="service-description">
+                    An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.
+                  </p>
+                </div>
+                <div class="service">
+                  <div class="service-icon">
+                    <img src="./assets/images/services/support-service.png" alt="icon of support service" height="64" width="64">
+                  </div>
+                  <h3 class="service-name">
+                    Comprehensive daily legal support
+                  </h3>
+                  <p class="service-description">
+                    In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.
+                  </p>
+                </div>
+                <div class="service">
+                  <div class="service-icon">
+                    <img src="./assets/images/services/corporate-service.png" alt="icon of corporate service" height="64" width="64">
+                  </div>
+                  <h3 class="service-name">
+                    Structuring corporate relationships
+                  </h3>
+                  <p class="service-description">
+                    Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.
+                  </p>
+                </div>
+                <div class="service">
+                  <div class="service-icon">
+                    <img src="./assets/images/services/trust-service.png" alt="icon of trust service" height="64" width="64">
+                  </div>
+                  <h3 class="service-name">
+                    Building contractual relations
+                  </h3>
+                  <p class="service-description">
+                    Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.
+                  </p>
+                </div>
+                <div class="service">
+                  <div class="service-icon">
+                    <img src="./assets/images/services/protection-service.png" alt="icon of protection service" height="64" width="64">
+                  </div>
+                  <h3 class="service-name">
+                    Protection of business, intellectual property
+                  </h3>
+                  <p class="service-description">
+                    And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.
+                  </p>
+                </div>
+                <div class="service">
+                  <div class="service-icon">
+                    <img src="./assets/images/services/court-service.png" alt="icon of court service" height="64" width="64">
+                  </div>
+                  <h3 class="service-name">
+                    Judicial representation
+                  </h3>
+                  <p class="service-description">
+                    Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?
+                  </p>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="slider">
-            <button type="button" class="team-member-slide active"></button>
-            <button type="button" class="team-member-slide"></button>
-            <button type="button" class="team-member-slide"></button>
-          </div>
+          </section>
         </div>
-      </section>
-      <section class="clients">
-        <h2 class="clients-title">
-          They already trust us
-        </h2>
-        <div class="client-wrapper">
-          <div class="clients-list">
-            <div class="client client-hillel">
-              <a href="/" class="client-page">
-                <img src="./assets/images/clients/hillel.png" alt="logo of client Hillel" height="48" width="217">
-              </a>
+      </div>
+        <section class="squad">
+          <div class="wrapper">
+            <div class="team-member-card">
+              <div class="team-member-photo"></div>
+              <div class="team-member-details">
+                <a href="/" class="section-link">
+                  Команда
+                </a>
+                <h2 class="section-title">
+                  Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.
+                </h2>
+                <p class="team-member-name">
+                  Олександр Олександровський
+                </p>
+                <p class="team-member-position">
+                  Керуючий партнер
+                </p>
+              </div>
             </div>
-            <div class="client client-wannaBiz">
-              <a href="/" class="client-page">
-                <img src="./assets/images/clients/wannaBiz.png" alt="logo of client WannaBiz" height="32" width="199">
-              </a>
-            </div>
-            <div class="client client-tapgerine">
-              <a href="/" class="client-page">
-                <img src="./assets/images/clients/tapgerine.png" alt="logo of client Tapgerine" height="44" width="179">
-              </a>
-            </div>
-            <div class="client client-3dLook">
-              <a href="/" class="client-page">
-                <img src="./assets/images/clients/3dLook.png" alt="logo of client 3D Look" height="42" width="180">
-              </a>
-            </div>
-            <div class="client client-orangear">
-              <a href="/" class="client-page">
-                <img src="./assets/images/clients/orangear.png" alt="logo of client Orangear" height="44" width="174">
-              </a>
-            </div>
-            <div class="client client-adtelligent">
-              <a href="/" class="client-page">
-                <img src="assets/images/clients/adtelligent.png" alt="logo of client Adtelligent" height="48" width="195">
-              </a>
-            </div>
-            <div class="client client-clickky">
-              <a href="/" class="client-page">
-                <img src="./assets/images/clients/clickky.png" alt="logo of client Clickky" height="61" width="138">
-              </a>
-            </div>
-            <div class="client client-ecolease">
-              <a href="/" class="client-page">
-                <img src="./assets/images/clients/ecolease.png" alt="logo of client Eco Leasing" height="76" width="146">
-              </a>
-            </div>
-            <div class="client client-infraTek">
-              <a href="/" class="client-page">
-                <img src="./assets/images/clients/infraTek.png" alt="logo of client Infratek" height="60" width="182">
-              </a>
-            </div>
-            <div class="client client-cityPark">
-              <a href="/" class="client-page">
-                <img src="./assets/images/clients/cityPark.png" alt="logo of client City Park" height="38" width="181">
-              </a>
-            </div>
-            <div class="client client-artPrint">
-              <a href="/" class="client-page">
-                <img src="./assets/images/clients/art-print.png" alt="logo of client Art-Print" height="46" width="189">
-              </a>
-            </div>
-            <div class="client client-ultimateCard">
-              <a href="/" class="client-page">
-                <img src="./assets/images/clients/ultimateCard.png" alt="logo of client Ultimate Card" height="95" width="152">
-              </a>
+            <div class="slider">
+              <button type="button" class="team-member-slide active"></button>
+              <button type="button" class="team-member-slide"></button>
+              <button type="button" class="team-member-slide"></button>
             </div>
           </div>
-        </div>
-      </section>
-      <section class="publications">
-        <div class="wrapper">
-          <a href="/" class="section-link">
-            Publications
-          </a>
-          <h2 class="section-title">
-            We have something to tell
+        </section>
+        <section class="clients">
+          <h2 class="clients-title">
+            They already trust us
           </h2>
-          <div class="articles">
+          <div class="client-wrapper">
+            <div class="clients-list">
+              <div class="client client-hillel">
+                <a href="/" class="client-page">
+                  <img src="./assets/images/clients/hillel.png" alt="logo of client Hillel" height="48" width="217">
+                </a>
+              </div>
+              <div class="client client-wannaBiz">
+                <a href="/" class="client-page">
+                  <img src="./assets/images/clients/wannaBiz.png" alt="logo of client WannaBiz" height="32" width="199">
+                </a>
+              </div>
+              <div class="client client-tapgerine">
+                <a href="/" class="client-page">
+                  <img src="./assets/images/clients/tapgerine.png" alt="logo of client Tapgerine" height="44" width="179">
+                </a>
+              </div>
+              <div class="client client-3dLook">
+                <a href="/" class="client-page">
+                  <img src="./assets/images/clients/3dLook.png" alt="logo of client 3D Look" height="42" width="180">
+                </a>
+              </div>
+              <div class="client client-orangear">
+                <a href="/" class="client-page">
+                  <img src="./assets/images/clients/orangear.png" alt="logo of client Orangear" height="44" width="174">
+                </a>
+              </div>
+              <div class="client client-adtelligent">
+                <a href="/" class="client-page">
+                  <img src="assets/images/clients/adtelligent.png" alt="logo of client Adtelligent" height="48" width="195">
+                </a>
+              </div>
+              <div class="client client-clickky">
+                <a href="/" class="client-page">
+                  <img src="./assets/images/clients/clickky.png" alt="logo of client Clickky" height="61" width="138">
+                </a>
+              </div>
+              <div class="client client-ecolease">
+                <a href="/" class="client-page">
+                  <img src="./assets/images/clients/ecolease.png" alt="logo of client Eco Leasing" height="76" width="146">
+                </a>
+              </div>
+              <div class="client client-infraTek">
+                <a href="/" class="client-page">
+                  <img src="./assets/images/clients/infraTek.png" alt="logo of client Infratek" height="60" width="182">
+                </a>
+              </div>
+              <div class="client client-cityPark">
+                <a href="/" class="client-page">
+                  <img src="./assets/images/clients/cityPark.png" alt="logo of client City Park" height="38" width="181">
+                </a>
+              </div>
+              <div class="client client-artPrint">
+                <a href="/" class="client-page">
+                  <img src="./assets/images/clients/art-print.png" alt="logo of client Art-Print" height="46" width="189">
+                </a>
+              </div>
+              <div class="client client-ultimateCard">
+                <a href="/" class="client-page">
+                  <img src="./assets/images/clients/ultimateCard.png" alt="logo of client Ultimate Card" height="95" width="152">
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="publications">
+          <div class="wrapper">
+            <a href="/" class="section-link">
+              Publications
+            </a>
+            <h2 class="section-title">
+              We have something to tell
+            </h2>
+            <div class="articles">
               <article class="article">
                 <a href="/" class="article-page">
                   <div class="article-banner art-equity"></div>
@@ -245,9 +277,9 @@
                   </div>
                 </a>
               </article>
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
     </main>
   </body>
 </html>
